<resources>
    <string name="app_name">ComponentsApp</string>
    <string name="start_background_service">Start Background Service</string>
    <string name="start_foreground_service">Start Foreground Service</string>
    <string name="start_timer_service">Start Timer Service</string>
    <string name="stop">Stop</string>
    <string name="pause_timer_service">Pause Timer Service</string>
    <string name="stop_timer_service">Stop Timer Service</string>
</resources>